[gd_scene load_steps=6 format=3 uid="uid://vo40br5oj5dq"]

[ext_resource type="Script" path="res://Scenes/Maps/Map1.gd" id="1_huv8q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cikf0"]
size = Vector2(540, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_l2wd5"]
size = Vector2(540, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_uqape"]
size = Vector2(20, 960)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_23y1g"]
size = Vector2(20, 960)

[node name="Map1" type="Node2D"]
script = ExtResource("1_huv8q")

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2(270, 960)

[node name="Collision" type="CollisionShape2D" parent="Floor"]
shape = SubResource("RectangleShape2D_cikf0")

[node name="Ceiling" type="StaticBody2D" parent="."]
position = Vector2(270, -10)

[node name="Collision" type="CollisionShape2D" parent="Ceiling"]
shape = SubResource("RectangleShape2D_l2wd5")

[node name="WallLeft" type="StaticBody2D" parent="."]
position = Vector2(-10, 480)

[node name="Collision" type="CollisionShape2D" parent="WallLeft"]
shape = SubResource("RectangleShape2D_uqape")

[node name="WallRight" type="StaticBody2D" parent="."]
position = Vector2(550, 480)

[node name="Collision" type="CollisionShape2D" parent="WallRight"]
shape = SubResource("RectangleShape2D_23y1g")

[node name="TileHolder" type="Node" parent="."]
